commit latihan week 2

--- a/Week1/index.html
+++ b/Week1/index.html
@@ -4,66 +4,36 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Form Registrasi Akun</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <div>
-      <h1>Form Registrasi Akun</h1>
-      <form action="/submit" method="post">
-        <div>
-          <label for="Nama Lengkap">Nama Lengkap:</label>
-          <input
-            placeholder="Masukkan nama lengkap"
-            type="text"
-            id="NamaLengkap"
-            name="NamaLengkap"
-            required
-          />
-        </div>
-        <div>
-          <label for="Email">Email:</label>
-          <input
-            placeholder="Masukkan email"
-            type="email"
-            id="Email"
-            name="Email"
-            required
-          />
-        </div>
-        <div>
-          <label for="Username">Username:</label>
-          <input
-            placeholder="Masukkan username"
-            type="text"
-            id="Username"
-            name="Username"
-            required
-          />
-        </div>
-        <div>
-          <label for="Password">Password:</label>
-          <input
-            placeholder="Masukkan password"
-            type="password"
-            id="Password"
-            name="Password"
-            required
-          />
-        </div>
-        <div>
-          <label for="Konfirmasi Password">Konfirmasi Password:</label>
-          <input
-            placeholder="Masukkan kembali password"
-            type="password"
-            id="KonfirmPassword"
-            name="Konfirmasi Password"
-            required
-          />
-        </div>
-        <div>
-          <input id="tombolDaftar" type="submit" value="Daftar" />
-        </div>
-      </form>
+        <h1>Form Registrasi Akun</h1>
+        <form action="/submit" method="post">
+            <div>
+                <label for="Nama Lengkap">Nama Lengkap:</label>
+                <input placeholder="Masukkan nama lengkap" type="text" id="NamaLengkap" name="NamaLengkap" required />
+            </div>
+            <div>
+                <label for="Email">Email:</label>
+                <input placeholder="Masukkan email" type="email" id="Email" name="Email" required />
+            </div>
+            <div>
+                <label for="Username">Username:</label>
+                <input placeholder="Masukkan username" type="text" id="Username" name="Username" required />
+            </div>
+            <div>
+                <label for="Password">Password:</label>
+                <input placeholder="Masukkan password" type="password" id="Password" name="Password" required />
+            </div>
+            <div>
+                <label for="Konfirmasi Password">Konfirmasi Password:</label>
+                <input placeholder="Masukkan kembali password" type="password" id="KonfirmPassword" name="Konfirmasi Password" required />
+            </div>
+            <div>
+                <input id="tombolDaftar" type="submit" value="Daftar" />
+            </div>
+        </form>
     </div>
   </body>
 </html>
